FIX Campagne form button behind top menu 	modified:   css/main.css 	modified:   src/views/campagne_form.html.twig

--- a/css/main.css
+++ b/css/main.css
@@ -521,4 +521,7 @@ fieldset[disabled] .btn-notifs.active {
 blockquote {
   font-size: 14px;
 }	
-	
+.form-general {
+  margin-top: 50px;
+  padding-right: 20px;
+}
